src/test/ui/consts/const_unsafe_unreachable_ub.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/hint.rs:LL:COL
   |
LL |     unsafe { intrinsics::unreachable() }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |              |
   |              entering unreachable code
   |              inside `unreachable_unchecked` at $SRC_DIR/core/src/hint.rs:LL:COL
   |
  ::: $DIR/const_unsafe_unreachable_ub.rs:6:18
   |
LL |         false => std::hint::unreachable_unchecked(),
   |                  ---------------------------------- inside `foo` at $DIR/const_unsafe_unreachable_ub.rs:6:18
...
LL | const BAR: bool = unsafe { foo(false) };
   |                            ---------- inside `BAR` at $DIR/const_unsafe_unreachable_ub.rs:10:28

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
